--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 Kendall Miles is a Black-owned luxury shoe brand. Their shoes retail for approx. $400 to $500. <strong><em>Many celebrities wear them!</em></strong>
 
 <div align="center"><p>
-<img src="images/heels.jpeg" width="200" height= "200" style="border:solid 2px black">
-<img src="images/heels2.jpeg" width="200" height="200" style="border:solid 2px black">
-<img src="images/heels3.jpg" width="200" height="200"style="border:solid 2px black">
-<img src="images/heels4.jpg" width="200" height="200" style="border:solid 2px black"></p></div>
+<img src="heels.jpeg" width="200" height= "200" style="border:solid 2px black">
+<img src="heels2.jpeg" width="200" height="200" style="border:solid 2px black">
+<img src="heels3.jpg" width="200" height="200"style="border:solid 2px black">
+<img src="heels4.jpg" width="200" height="200" style="border:solid 2px black"></p></div>
 
 <strong><h2 style="font-size:2rem; color: #03254c; width:37%; border:solid 3px #03254c; margin-bottom:-10px">What other shoe brands do I love?</h2></strong>
 <h3 style="font-size:2rem"><font color="red"> LOUBOUTINS</font></h3>
@@ -24,8 +24,8 @@ Kendall Miles is a Black-owned luxury shoe brand. Their shoes retail for approx.
 
 <p> Regardless, wearing <a href="http://us.christianlouboutin.com/" target="_blank"> Louboutins</a> is <strong>WORTH IT</strong>. Here's some pictures of these gorgeous babies. </p>
 
-<div align="center"><img src="images/lou3.jpeg" width="200" height="200" style="border:solid 2px black">
-<img src="images/lou4.jpeg" width="200" height="200" style="border:solid 2px black"></div>
+<div align="center"><img src="lou3.jpeg" width="200" height="200" style="border:solid 2px black">
+<img src="lou4.jpeg" width="200" height="200" style="border:solid 2px black"></div>
 
 
 
