--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <p style="font-size:1rem">I love heels! They're the most beautiful pair of shoes to exist. They make every outfit look splendid! My favorite brand is <a href="https://www.kendallmilesdesigns.com" target="_blank"> Kendall Miles</a>.
 
-Kendall Miles is a Black-owned luxury shoe brand. Their shoes retail for approx. $400 to $500. <strong><em>Many celebrities wear them!</em></strong>
+Kendall Miles is a Black-owned luxury shoe brand. Their shoes retail for approximately $400 to $500. <strong><em>Many celebrities- including Beyonce- wear them!</em></strong>
 
 <div align="center"><p>
 <img src="heels.jpeg" width="200" height= "200" style="border:solid 2px black">
