--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <!doctype html>
 <html>
 <head>
+<!-- Primary Meta Tags -->
 <title>Heels, heels, heels</title>
+<meta name="title" content="Heels, heels, heels">
+<meta name="description" content="Luxury shoes can be expensive but Kendall Miles and Christian Louboutin prove that the price tag is worth it.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://metatags.io/">
+<meta property="og:title" content="Heels, heels, heels">
+<meta property="og:description" content="Luxury shoes can be expensive but Kendall Miles and Christian Louboutin prove that the price tag is worth it.">
+<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:title" content="Heels, heels, heels">
+<meta property="twitter:description" content="Luxury shoes can be expensive but Kendall Miles and Christian Louboutin prove that the price tag is worth it.">
+<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+	
 </head>
+
 <body style="background-color:#ffe5b4">
 
 <div style="width:53%; margin-bottom:-10px"><h1 style="font-size: 3rem; color:#03254c; border:solid 3px #03254c">THE BEST SHOES ON EARTH</h1></div>
